--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.10.4",
+    "apollo-server-core": "^3.13.0",
+    "apollo-server-express": "^3.13.0",
     "graphql": "^16.8.1"
   },
   "devDependencies": {
