--- a/frontend/ello/package.json
+++ b/frontend/ello/package.json
@@ -15,6 +15,7 @@
     "graphql-tag": "^2.12.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-scripts": "^5.0.1",
     "react-spring": "^9.7.3",
     "web-vitals": "^2.1.4"
