--- a/frontend/ello/package.json
+++ b/frontend/ello/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "apollo-server-express": "^3.13.0",
+    "cors": "^2.8.5",
     "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6",
     "react": "^18.3.1",
